fix: prevent login user enumeration
